<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_claro"
    tools:context=".LojaForm" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txv_venda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="80dp"
                android:clickable="true"
                android:drawableTop="@drawable/img_venda"
                android:onClick="selecionaOpcao"
                android:text="@string/txt_vendas"
                android:textColor="@color/branco"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_produtos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/txv_venda"
                android:layout_marginRight="50dp"
                android:clickable="true"
                android:drawableTop="@drawable/img_produto"
                android:onClick="selecionaOpcao"
                android:text="@string/txt_produtos"
                android:textColor="@color/branco"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_clientes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/txv_venda"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="120dp"
                android:clickable="true"
                android:drawableTop="@drawable/img_cliente"
                android:onClick="selecionaOpcao"
                android:text="@string/txt_clientes"
                android:textColor="@color/branco"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv_usuarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txv_clientes"
                android:layout_alignRight="@id/txv_produtos"
                android:clickable="true"
                android:drawableTop="@drawable/img_usuario"
                android:onClick="selecionaOpcao"
                android:text="@string/txt_usuarios"
                android:textColor="@color/branco"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>